Horizon new launch instance form
    A new launch instance form in a pure angular development
    Here are the enhancement:
        - better use of less and bootstrap
(part of https://blueprints.launchpad.net/horizon/+spec/css-breakdown)
        - use of a centralized list of variable.
It makes css customization easier, improve maintainability and reduce
code footprint. (part of
https://blueprints.launchpad.net/horizon/+spec/centralized-color-palette)
        - use of angular for all the heavy lift client side (part of
https://blueprints.launchpad.net/horizon/+spec/horizon-angular)
        - reduce the use of class based view put the displaying logic
on client side and only handle datas on server side.

    TODO list:
        - provide some tests for the client side
        - split this commit in one for each blueprint

Implements: blueprint launch-instance-ux-enhancement

Change-Id: Ie0d5b33c0919c7378eae30ad51dcd2f8d297861a

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -57,12 +57,17 @@ HORIZON_CONFIG = {
     'auto_fade_alerts': {
         'delay': 3000,
         'fade_duration': 1500,
-        'types': ['alert-success', 'alert-info']
+        'types': ['success', 'info']
     },
     'help_url': "http://docs.openstack.org",
     'exceptions': {'recoverable': exceptions.RECOVERABLE,
                    'not_found': exceptions.NOT_FOUND,
                    'unauthorized': exceptions.UNAUTHORIZED},
+    'debug': DEBUG,
+    'nav_accordion': {
+        'all_open': False,
+        'one_at_a_time': True
+    },
 }
 
 # Specify a regular expression to validate user passwords.
