Replace horizon alerting with an angular one
    Horizon alerting is now fully integrated into the angular
application. The object horizon.msg is available in the application
in order to keep the compatibility, it is a link to the new angular
service object.

Change-Id: If52b364eb8f3c0976bd1799a806db1a67431b5f5
Implements: blueprint horizon-angular

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -57,7 +57,7 @@ HORIZON_CONFIG = {
     'auto_fade_alerts': {
         'delay': 3000,
         'fade_duration': 1500,
-        'types': ['alert-success', 'alert-info']
+        'types': ['success', 'info']
     },
     'help_url': "http://docs.openstack.org",
     'exceptions': {'recoverable': exceptions.RECOVERABLE,
