--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -63,6 +63,11 @@ HORIZON_CONFIG = {
     'exceptions': {'recoverable': exceptions.RECOVERABLE,
                    'not_found': exceptions.NOT_FOUND,
                    'unauthorized': exceptions.UNAUTHORIZED},
+    'debug': DEBUG,
+    'nav_accordion': {
+        'all_open': False,
+        'one_at_a_time': True
+    },
 }
 
 # Specify a regular expression to validate user passwords.
